# dotfiles

./: .muttrc  .vimrc  README.md  install.sh
.claude/: CLAUDE.md
.claude/commands/: brainstorm.md  plan.md  session-summary.md  setup.md
.claude/docs/specs/: 2026-04-12-claude-md-refactoring-design.md  2026-04-12-claude-md-refactoring-plan.md
.claude/hooks/: guard-commands.sh  guard-commands.test.sh
.claude/mcp/chrome/: package-lock.json
.claude/rules/: code-style.md  git.md  python.md  testing.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/browsing/: SKILL.md
.claude/skills/creating-skills/: SKILL.md
.claude/skills/executing-plans/: README.md  SKILL.md  (+4 more)
.claude/skills/m365-cost-management/: .env.example  .gitignore  README.md  SKILL.md  examples.md  pyproject.toml  reference.md
.claude/skills/m365-cost-management/scripts/: collect_m365_data.py  generate_dashboard.py  import_adp_data.py  update_pricing.py
.claude/skills/m365-cost-management/tests/: .gitkeep  test_adp_import.py  test_collect_m365_data.py  test_dashboard_pricing.py  test_incremental_collection.py  test_incremental_fetch.py
.config/brewfile/: Brewfile
.config/ghostty/: config
.config/tmux/: keybindings.conf  theme.conf  tmux.conf
docs/: claude-code-setup.md  vim-configuration.md
docs/skills/: README.md  brainstorming.md  browsing.md  creating-skills.md  executing-plans.md  m365-cost-management.md  pdf.md  quick-descriptive-stats.md  remembering-conversations.md  simplifying-control-flow.md  test-driven-development.md  writing-clearly-and-concisely.md  xlsx.md
(+20 files in other folders)
